# cmake-template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile_run.sh  compile_run_with_conan.sh  compile_run_without_conan.sh  conan_compile_run.sh  conan_provider.cmake  conan_setup.sh  conanfile.txt  cspell.json  dependencies.cmake  vcpkg.json  vcpkg_compile_run.sh  vcpkg_setup.sh
appdemo/: CMakeLists.txt
appdemo/src/: main.cpp
apphello/: CMakeLists.txt
apphello/src/: apphello.cpp
cmake/: add_git_submodule.cmake  clang_format.cmake  clang_tidy.cmake  compiler_options.cmake  cpack.cmake  cppcheck.cmake  dependencies.cmake  doxygen.cmake  standard_options.cmake
doc/: CMakeLists.txt  conf.py.in  index.rst
libbar/: CMakeLists.txt
libbar/inc/: libbar.h
libbar/src/: libbar.cpp
libbar/test/: test_libbar.cpp
libfoo/: CMakeLists.txt
libfoo/inc/: libfoo.h
libfoo/src/: libfoo.cpp
libfoo/test/: test_libfoo.cpp
libhello/: CMakeLists.txt
libhello/inc/: libhello.h
libhello/src/: libhello.cpp
libhello/test/: test_libhello.cpp
libmymath/: CMakeLists.txt
libmymath/inc/: libmymath.h
libmymath/src/: libmymath.cpp
libmymath/test/: test_libmymath.cpp
